2008-02-21  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-mime-part.c:
	Do not lose the filename of the attachment disposition in
	case we set it as purged.

2008-02-20  Philip Van Hoof <pvanhoof@gnome.org>

	* Improvement for cancel's their reconnection

2008-02-18  Philip Van Hoof <pvanhoof@gnome.org>

	* Make distcheck for the .NET bindings (finally)

2008-02-16  Philip Van Hoof <pvanhoof@gnome.org>

	* NAMESPACE vs. LIST separator for mail.h-farm.it
	* Get-Message cancels
	* Various smaller bugfixes

2008-02-15  Philip Van Hoof <pvanhoof@gnome.org>

	* Merged Alberto's cancel patch of yesterday with some minor
	corrections and committed the patch

2008-02-14  Alberto Garcia Gonzalez <agarcia@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-folder.[ch]:
	Added new attribute: cancel_occurred
	(imap_update_summary): Set cancel_occurred to TRUE when the
	operation is cancelled by the user.
	(camel_imap_folder_selected): Don't try to refresh the folder
	again if a cancel has happened.

2008-02-12  Alberto Garcia Gonzalez <agarcia@igalia.com>

	* libtinymailui-gtk/tny-gtk-text-buffer-stream.c:
	Write only full UTF-8 characters into the GtkTextBuffer. If an
	input buffer contains incomplete UTF-8 chars, save those bytes and
	write them with the following buffer.

2008-02-11  Alberto Garcia Gonzalez <agarcia@igalia.com>

	* libtinymail-gnomevfs/tny-vfs-stream.c:
	(tny_vfs_reset): Return 0 on success

2008-02-09  Philip Van Hoof <pvanhoof@gnome.org>

	* Crash when the IMAP server doesn't support namespaces
	* GLib Signal leakage in TnyGtkFolderStoreTreeModel
	* Various smaller fixes and code improvements
	* Has-attachment status detection improvement
	* Added a tny_mime_part_get_decoded_stream API

	* This was a minor API change

2008-02-05  Philip Van Hoof <pvanhoof@gnome.org>

	* Making the DotNet bindings actually work
	* Added a demoui written in C#

2008-02-05  Jose Dapena Paz  <jdapena@igalia.com>
